[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = 'abort'
rpath = false

[workspace]
members = [
    "mop",
    "mop-blocks",
    "mop-common-defs",
    "mop-facades",
    "mop-solvers",

    "mop-bindings",
    "problems",
]
