[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = 'abort'
rpath = false

[workspace]
members = [
    "mop-bindings",
    "mop-blocks",
    "mop-blocks-fuzz",
    "mop-common",
    "mop-facades",
    "mop-problems",
    "mop-solvers",
    "mop",
]
resolver = "2"