[dependencies]
arrayvec = { default-features = false, optional = true, version = "0.5" }
getrandom = { default-features = false, features = ["wasm-bindgen"], optional = true, version = "0.1" }
js-sys = { default-features = false, optional = true, version = "0.3" }
mop = { path = "../mop" }
rand = { default-features = false, optional = true, version = "0.7" }
wasm-bindgen = { default-features = false, features = ["std", "spans"], optional = true, version = "0.2" }
wasm-bindgen-futures = { default-features = false, optional = true, version = "0.4" }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lib]
crate-type = ["cdylib"]

[features]
default = []
with-futures = ["mop/with-futures"]
with-wasm_bindgen = ["arrayvec", "getrandom", "js-sys", "rand", "wasm-bindgen", "wasm-bindgen-futures"]

[package]
edition = "2018"
name = "mop-bindings"
publish = false
version = "0.0.0"

