[dependencies]
arrayvec = { default-features = false, version = "0.5" }
cl-traits = { default-features = false, features = ["alloc", "with-arrayvec"], version = "4.0" }
futures = { default-features = false, features = ["alloc"], optional = true, version = "0.3" }
mop-common = { path = "../mop-common", version = "0.3.0" }
ndsparse = { default-features = false, optional = true, version = "0.7" }
num-traits = { default-features = false, features = ["libm"], version = "0.2" }
rand = { default-features = false, features = ["getrandom"], optional = true, version = "0.7" }
serde = { default-features = false, features = ["derive"], optional = true, version = "1.0" }

[dev-dependencies]
mop-problems = { path = "../mop-problems" }

[features]
default = []
std = ["cl-traits/std", "futures/std", "mop-common/std", "ndsparse/std", "num-traits/std", "rand/std", "serde/std"]
with-futures = ["futures", "mop-common/with-futures"]
with-ndsparse = ["ndsparse"]
with-rand = ["ndsparse/with-rand", "rand"]
with-serde = ["cl-traits/with-serde", "ndsparse/with-serde", "rand/serde1", "serde"]

[package]
authors = ["Caio Fernandes <c410.f3r@gmail.com>"]
description = "Foundation blocks for MOP"
edition = "2018"
keywords = ["mop"]
license = "Apache-2.0"
name = "mop-blocks"
readme = "README.md"
repository = "https://github.com/c410-f3r/mop"
version = "0.3.0"
