[dependencies]
arrayvec = { default-features = false, version = "0.5" }
cl-traits = { default-features = false, features = ["alloc", "with-arrayvec"], git = "https://github.com/c410-f3r/cl-traits" }
futures = { default-features = false, features = ["alloc"], optional = true, version = "0.3" }
mop-common = { default-features = false, path = "../mop-common", version = "0.5.0" }
ndsparse = { default-features = false, features = ["with-rand"], optional = true, git = "https://github.com/c410-f3r/ndsparse" }
num-traits = { default-features = false, features = ["libm"], version = "0.2" }
rand = { default-features = false, features = ["getrandom"], optional = true, version = "0.7" }
serde = { branch = "const-gen", default-features = false, features = ["const-generics", "derive"], optional = true, git = "https://github.com/c410-f3r/serde" }

[features]
default = []
std = ["cl-traits/std"]
with-futures = ["futures", "mop-common/with-futures"]
with-ndsparse = ["ndsparse"]
with-rand = ["rand"]
with-serde = ["serde"]

[package]
authors = ["Caio Fernandes <c410.f3r@gmail.com>"]
description = "Foundation blocks for MOP"
edition = "2018"
keywords = ["mop"]
license = "Apache-2.0"
name = "mop-blocks"
readme = "README.md"
repository = "https://github.com/c410-f3r/mop"
version = "0.5.0"
