[[bin]]
name = "mop_problems"
path = "src/main.rs"

[dependencies]
arrayvec = { default-features = false, version = "0.5" }
cl-traits = { default-features = false, git = "https://github.com/c410-f3r/cl-traits" }
mop = { features = ["std", "with-futures", "with-ndsparse"], path = "../mop" }
ndsparse = { default-features = false, git = "https://github.com/c410-f3r/ndsparse"  }
plotters = { default-features = false, features = ["svg_backend"], optional = true, version = "0.3" }
rand = { default-features = false, features = ["getrandom"], version = "0.7" }
tokio = { default-features = false, features = ["macros", "rt-threaded"], version = "0.2" }

[features]
binh-and-korn = []
constr = []
cvrp = []
default = []
rastrigin = []
schaffer-function-2 = []
stdout = []
test-function-4 = []
with-plotters = ["plotters"]

[lib]
name = "mop_problems"
path = "src/lib.rs"

[package]
edition = "2018"
name = "mop-problems"
publish = false
version = "0.0.0"

[workspace]
