[dependencies]
cl-traits = { default-features = false, git = "https://github.com/c410-f3r/cl-traits" }
mop-blocks = { default-features = false, features = ["with-rand"], path = "../mop-blocks", version = "0.5.0" }
mop-common = { default-features = false, path = "../mop-common", version = "0.5.0" }
num-integer = { default-features = false, version = "0.1" }
num-traits = { default-features = false, features = ["libm"], version = "0.2" }
rand = { default-features = false, version = "0.7" }

[features]
default = []
std = ["mop-blocks/std", "mop-common/std", "num-traits/std", "rand/std"]

[package]
authors = ["Caio Fernandes <c410.f3r@gmail.com>"]
description = "Solvers for MOP"
edition = "2018"
keywords = ["mop"]
license = "Apache-2.0"
name = "mop-solvers"
readme = "README.md"
repository = "https://github.com/c410-f3r/mop"
version = "0.5.0"