[dependencies]
mop-blocks = { default-features = false, features = ["with-rand"], path = "../mop-blocks", version = "0.5.0" }
mop-facades = { default-features = false, path = "../mop-facades", version = "0.5" }
mop-solvers = { default-features = false, optional = true, path = "../mop-solvers", version = "0.5.0" }

[features]
default = []
std = ["mop-blocks/std", "mop-facades/std", "mop-solvers/std"]
with-futures = ["mop-blocks/with-futures"]
with-mop-solvers = ["mop-solvers"]
with-ndsparse = ["mop-blocks/with-ndsparse"]
with-serde = ["mop-blocks/with-serde"]

[package]
authors = ["Caio Fernandes <c410.f3r@gmail.com>"]
categories = ["algorithms", "concurrency"]
description = "Flexible and modular single or multi-objective solver for contiguous and discrete problems"
edition = "2018"
keywords = ["solver", "performance", "metaheuristic", "optimization"]
license = "Apache-2.0"
name = "mop"
readme = "README.md"
repository = "https://github.com/c410-f3r/mop"
version = "0.5.0"