[dependencies]
arrayvec = { default-features = false, version = "0.7" }
cl-aux = { default-features = false, features = ["alloc", "arrayvec"], version = "4.0" }
js-sys = { default-features = false, optional = true, version = "0.3" }
ndstruct = { default-features = false, features = ["rand"], optional = true, version = "2.0" }
num-integer = { default-features = false, optional = true, version = "0.1" }
num-traits = { default-features = false, features = ["libm"], version = "0.2" }
rand = { default-features = false, features = ["getrandom"], optional = true, version = "0.8" }
rayon = { default-features = false, optional = true, version = "1.0" }
serde = { default-features = false, features = ["derive"], optional = true, version = "1.0" }
wasm-bindgen = { default-features = false, features = ["std", "spans"], optional = true, version = "0.2" }

[dev-dependencies]
wasm-bindgen-test = { default-features = false, version = "0.3" }

[features]
default = []
rand = ["ndstruct/rand", "dep:rand"]
solvers = ["dep:num-integer", "rand"]
std = ["cl-aux/std"]
wasm-bindgen = ["dep:js-sys", "solvers", "dep:wasm-bindgen"]

[package]
authors = ["Caio Fernandes <c410.f3r@gmail.com>"]
description = "Foundation blocks for MOP"
edition = "2021"
keywords = ["mop"]
license = "Apache-2.0"
name = "mop"
readme = "README.md"
repository = "https://github.com/c410-f3r/mop"
version = "0.5.0"
